# emberscan

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: dvrf_emulation.yaml  emberscan.yaml  router_emulation.yaml
docker/: docker-compose.yml
docs/: dvrf_emulation.md  index.md  quickstart.md  router_emulation.md
docs/wiki/: API-Reference.md  CLI-Reference.md  Getting-Started.md  Home.md  Installation.md  Scanners.md  Troubleshooting.md
emberscan/: __init__.py  __main__.py  cli.py
emberscan/core/: __init__.py  config.py  exceptions.py  logger.py  models.py  scanner.py
emberscan/emulators/: __init__.py  dvrf_emulator.py  qemu_manager.py  router_emulator.py
emberscan/extractors/: __init__.py  firmware_extractor.py
emberscan/plugins/: __init__.py
emberscan/reporters/: __init__.py  html_reporter.py  json_reporter.py
emberscan/scanners/: __init__.py  base.py  binary_scanner.py  credential_scanner.py  crypto_scanner.py  cve_scanner.py  network_scanner.py  web_scanner.py
emberscan/utils/: __init__.py
examples/: basic_scan.py  custom_scanner_example.py
kernels/: .gitkeep
scripts/: install_linux.sh  setup_dvrf_emulation.sh
tests/: conftest.py  test_core.py  test_extractors.py  test_scanners.py
