[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "emberscan"
version = "1.0.0"
description = "Automated Embedded Hardware Firmware Security Scanner"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "EmberScan Team", email = "security@emberscan.io"}
]
maintainers = [
    {name = "EmberScan Team", email = "security@emberscan.io"}
]
keywords = [
    "security",
    "firmware",
    "embedded",
    "vulnerability",
    "scanner",
    "pentesting",
    "iot",
    "router",
    "qemu",
    "emulation"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Hardware",
    "Topic :: System :: Networking",
]
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
    "pyyaml>=6.0",
    "jinja2>=3.1.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "pycryptodome>=3.15.0",
    "python-magic>=0.4.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
docs = [
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.2.0",
    "myst-parser>=1.0.0",
]
all = [
    "emberscan[dev,docs]",
]

[project.urls]
Homepage = "https://github.com/emberscan/emberscan"
Documentation = "https://emberscan.readthedocs.io"
Repository = "https://github.com/emberscan/emberscan"
Changelog = "https://github.com/emberscan/emberscan/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/emberscan/emberscan/issues"

[project.scripts]
emberscan = "emberscan.cli:main"

[project.entry-points."emberscan.scanners"]
web = "emberscan.scanners.web_scanner:WebScanner"
network = "emberscan.scanners.network_scanner:NetworkScanner"
binary = "emberscan.scanners.binary_scanner:BinaryScanner"
credentials = "emberscan.scanners.credential_scanner:CredentialScanner"
cve = "emberscan.scanners.cve_scanner:CVEScanner"

[tool.setuptools]
packages = ["emberscan", "emberscan.core", "emberscan.extractors", "emberscan.emulators", "emberscan.scanners", "emberscan.reporters", "emberscan.utils", "emberscan.plugins"]
include-package-data = true

[tool.setuptools.package-data]
emberscan = ["templates/*", "data/*"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["emberscan"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=emberscan --cov-report=term-missing"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]

[tool.coverage.run]
branch = true
source = ["emberscan"]
omit = ["tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
